--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,7 +6,7 @@ afk-time-limit: 1800 # time in seconds before the player is considered AFK
 boss-bar: true # Enable or disable the boss bar that shows when in the AFK region
 
 # These are the messages that are sent to the player when they use the command
-Prefix: '&7[&bAFK Rewards&7]'
+Prefix: '&7[&bAFK Rewards&7] '
 no-permission: '&cYou do not have permission to use this command'
 reload: '&aSuccessfully reloaded the config!'
 boss-bar-message: 'You have been afk for {afktime} seconds!' # {afktime} is the time the player has been afk for
@@ -17,6 +17,7 @@ afk-rewards:
     reward: "diamond x5"
   - time: 600
     reward: "emerald x10"
+    command: "say {player} has been afk for 10 minutes!" # {player} is the player's name
   - time: 900
     reward: "golden apple x1"
     money-reward: 1000
