--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <mc.version>1.19.3</mc.version>                       <!-- default mc version -->
+        <mc.version>1.20</mc.version>                       <!-- default mc version -->
         <plugins.dir>${project.basedir}/out</plugins.dir>   <!-- default output dir -->
     </properties>
 
     <groupId>Incbom</groupId>
-    <artifactId>afk-plugin-STABLE</artifactId>
-    <version>1.0.4</version>
+    <artifactId>afk-rewards-STABLE</artifactId>
+    <version>2.0</version>
 
     <repositories>
-    <repository>
-        <id>sk89q-repo</id>
-        <url>https://maven.enginehub.org/repo/</url>
-    </repository>
         <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
@@ -29,7 +25,7 @@
 		    <id>jitpack.io</id>
 		    <url>https://jitpack.io</url>
 		</repository>
-                <repository>
+        <repository>
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
@@ -47,27 +43,6 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>plugin-annotations</artifactId>
             <version>1.2.3-SNAPSHOT</version>
-        </dependency>
-
-        <!-- worldguard -->
-        <dependency>
-            <groupId>com.sk89q.worldguard</groupId>
-            <artifactId>worldguard-bukkit</artifactId>
-            <version>7.0.7</version>
-            <scope>provided</scope>
-        </dependency>
-        <!-- worldedit -->
-        <dependency>
-            <groupId>com.sk89q.worldedit</groupId>
-            <artifactId>worldedit-bukkit</artifactId>
-            <version>7.2.8</version>
-            <scope>provided</scope>
-        </dependency>
-        <!-- worldguard-extra -->
-        <dependency>
-	    <groupId>com.github.NetzkroneHD</groupId>
-	    <artifactId>WGRegionEvents</artifactId>
-	    <version>v1.7.3</version>
         </dependency>
         <!-- Vault -->
         <dependency>
