--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,15 +7,26 @@
                                                                 
 
 # CONFIGURATION STARTS HERE:
-afk-region: "afk" # Change this to your WorldGuardRegion
-boss-bar: true # Enable or disable the boss bar that shows when in the AFK region
+bossbar: true # Enable or disable the boss bar that shows when in the AFK region
 
 # These are the messages that are sent to the player when they use the command
-Prefix: '&7[&bAFK Rewards&7] '
+prefix: '&7[&bAFK Rewards&7] '
 no-permission: '&cYou do not have permission to use this command'
 reload: '&aSuccessfully reloaded the config!'
 boss-bar-message: 'You have been afk for {afktime} seconds!' # {afktime} is the time the player has been afk for
 boss-bar-color: 'blue' # Any Minecraft supported colors
+region-enter-message: '&aYou have entered the AFK region!'
+region-leave-message: '&cYou have left the AFK region!'
+
+# Coords of the AFK region
+coords-1-x: 0.0
+coords-1-y: 0.0
+coords-1-z: 0.0
+
+# #2
+coords-2-x: 0.0
+coords-2-y: 0.0
+coords-2-z: 0.0
 
 time: 30 # The time in seconds that the player has to be afk for to get the reward
 # Money rewards
@@ -30,11 +41,8 @@ console-commands:
     - "give {player} golden_apple 1" # {player} is the player's name
     - "say hi"
 # Item rewards
-afk-rewards:
+item-rewards:
     - "diamond x5"
     - "emerald x10"
     - "golden apple x1"
     
-    
-# Spams console with this error
-Debug: true
